# LD_PRELOAD_EXAMPLE

./: .gitignore  .gitmodules  README.md
libfakehostname/: .gitignore  configure  meson.build
libfakehostname/src/: libfakehostname.c  meson.build
src/: Makefile  fakehostname.c
